# bole

./: .gitignore  AGENTS.md  Cargo.toml  README.md  addend.md  spec.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.cargo/: audit.toml
.omc/state/: hud-state.json  hud-stdin-cache.json
benches/: git_projection.rs  object_store.rs  snapshot_ops.rs
bole-api/: Cargo.toml  README.md
bole-api/src/: auth.rs  config.rs  error.rs  extract.rs  lib.rs  main.rs  router.rs  state.rs
bole-api/src/handlers/: boards.rs  mod.rs  profiles.rs  proposals.rs  repos.rs  snapshots.rs  status.rs  timelines.rs
bole-api/tests/: api.rs
bole-cli/: Cargo.toml  README.md
bole-cli/src/: actor.rs  audit.rs  collabkey.rs  context.rs  key.rs  main.rs  output.rs  registry.rs  resolve.rs  worktree.rs  worktrees.rs
bole-cli/src/commands/: account.rs  acl.rs  actor.rs  approver.rs  board.rs  discover.rs  doctor.rs  env.rs  git.rs  ignore.rs  init.rs  merge.rs  mod.rs  node.rs  object.rs  policy.rs  pr.rs  profile.rs  refs.rs  relay.rs  repo.rs  run.rs  secret.rs  snapshot.rs  status.rs  store.rs  sync.rs  tag.rs  timeline.rs  trust.rs  workspace.rs
bole-cli/tests/: account.rs  acl.rs  approvals.rs  cli.rs  collab_cli.rs  coverage.rs  doctor.rs  git_export.rs  git_import.rs  ignore.rs  merge.rs  plumbing.rs  refs.rs  secret.rs  sync.rs  workspace.rs  workspace_hardening.rs  worktrees.rs
docs/: API.md  CLI.md  THREAT_MODEL.md
docs/superpowers/: DEEP-DIVE-2026-07-11.md  HANDOFF.md  SCOPE-AUDIT.md  STATUS.md
docs/superpowers/plans/: 2026-06-26-gate1-object-store.md  2026-06-26-gate2-tags-timelines.md  2026-06-27-gate3-granular-visibility.md  2026-06-27-gate4-secrets-env.md  2026-06-27-gate5-virtual-repos.md  2026-06-27-gate6-multi-actor.md  2026-06-27-gate7-git-projection.md  2026-06-28-gate8-performance-scale.md  2026-06-29-ws1-access-policy-core.md  2026-07-01-ws2-decisions.md  2026-07-01-ws3-decisions.md  2026-07-01-ws4-decisions.md  2026-07-01-ws5-decisions.md  2026-07-01-ws6-decisions.md  2026-07-01-ws7-decisions.md  2026-07-03-ws8a-collaboration-substrate.md  2026-07-03-ws8b-networked-node.md  2026-07-03-ws8c-cache-and-forward.md  2026-07-03-ws8d-relay-and-stranger-search.md  2026-07-03-ws8e-trust-path-and-ranking.md  2026-07-04-bole-api-server-skeleton.md  2026-07-04-profile-bundle-read-api.md  2026-07-04-ws8f-a-trusted-relay-set-and-multi-relay-query.md  2026-07-04-ws8f-b-server-side-search-verb.md  2026-07-04-ws8f-c1-relay-search-cost-bounds.md
docs/superpowers/specs/: 2026-06-26-gate1-object-store-design.md  2026-06-26-gate2-tags-timelines-design.md  2026-06-27-gate3-granular-visibility-design.md  2026-06-27-gate4-secrets-env-design.md  2026-06-27-gate5-virtual-repos-design.md  2026-06-27-gate6-multi-actor-design.md  2026-06-27-gate7-git-projection-design.md  2026-06-28-gate8-performance-scale-design.md  2026-06-29-roadmap-foundations.md  2026-06-29-ws1-access-policy-core.md  2026-06-29-ws2-workspace-unification.md  2026-06-29-ws3-secrets-env.md  2026-06-29-ws4-storage-packs-gc.md  2026-06-29-ws5-distributed-sync.md  2026-06-29-ws6-git-import.md  2026-06-29-ws7-hardening-repositioning.md  2026-07-03-ws8a-collaboration-substrate-design.md  2026-07-03-ws8b-networked-node-design.md  2026-07-04-bole-ignore-design.md  (+10 more)
skills/claude-code/: SKILL.md
skills/codex/: AGENTS.md
skills/hermes/: SKILL.md
src/: audit.rs  board.rs  codec.rs  error.rs  lib.rs  pr.rs  reporecord.rs
src/acl/: attestation.rs  authority.rs  backend.rs  clearance.rs  disk.rs  glob.rs  hook.rs  lattice.rs  memory.rs  mod.rs  policy_object.rs  rules.rs
src/collab/: alias.rs  discovery.rs  mod.rs  naming.rs  object.rs  relay.rs  search.rs  trust.rs
src/crypto/: key_provider.rs  kms.rs  mod.rs
src/object/: blob.rs  env.rs  id.rs  mod.rs  secret.rs  snapshot.rs  tree.rs
src/refs/: backend.rs  disk.rs  memory.rs  mod.rs  name.rs  ref_type.rs  tag.rs  timeline.rs  transaction.rs
src/repo/: board.rs  collab.rs  ephemeral.rs  git_import.rs  git_projection.rs  materialize.rs  merge.rs  mod.rs  pr.rs  reporecord.rs  workspace.rs
src/store/: backend.rs  disk.rs  memory.rs  mod.rs  pack.rs  packed.rs
src/sync/: authn.rs  collab.rs  http.rs  hub.rs  mod.rs  negotiate.rs  session.rs  transport.rs  wire.rs
tests/: acl.rs  backends.rs  collab_discovery.rs  collab_network.rs  explain.rs  filter_monotonic.rs  git_projection.rs  multi_actor.rs  object_store.rs  refs.rs  repo.rs  scale.rs  secrets.rs
