# bole-4q6
[package]
name = "bole"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["fs", "sync", "rt", "io-util"] }
blake3 = "1"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
bytes = { version = "1", features = ["serde"] }
zstd = "0.13"
async-trait = "0.1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
