# bole-4q6
# bole-aqk
[workspace]
members = ["bole-cli"]

[package]
name = "bole"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["fs", "sync", "rt", "io-util"] }
blake3 = "1"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
bytes = { version = "1", features = ["serde"] }
zstd = "0.13"
async-trait = "0.1"
thiserror = "1"
chacha20poly1305 = "0.10"
rand = "0.8"
gix = { version = "0.70", default-features = false, features = ["max-performance-safe"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
flate2 = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "object_store"
harness = false

[[bench]]
name = "snapshot_ops"
harness = false

[[bench]]
name = "git_projection"
harness = false
