# bole-aqk
[package]
name = "bole-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bole"
path = "src/main.rs"

[dependencies]
bole = { path = ".." }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
