# bole-aqk
[package]
name = "bole-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "bole"
path = "src/main.rs"

[dependencies]
bole = { path = ".." }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] } # bole-g87
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
ignore = "0.4.27"

[dev-dependencies]
tempfile = "3"
